made homepage responsive

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
       </defs>
     </svg>
 
+    <!-- MOBILE NAVIGATION -->
+    <nav class="mobile-home-nav">
+      <ul>
+        <li><a href="#"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
+        <li><a href="#">Salon Services</a></li>
+        <li><a href="#">Spa Services</a></li>
+        <li><a href="#">Spa Packages</a></li>
+        <li><a href="#">Our Blog</a></li>
+      </ul>
+    </nav>
+
     <!-- BACKGROUND IMAGE -->
     <img class="background background" src="assets/dist/img/red-hair-bg.jpg" alt="hello gorgeous" title="hello gorgeous">
 
@@ -94,20 +105,24 @@
         <form class="centered">
           <h4><span class="fancy">Sign up today</span> to recieve special deals!</h4>
 
-          <div class="names">
-            <label for="name" class="centered">FIRST NAME</label>
-            <input class="centered" type="text" name="first name">
-          </div>
+          <div class="form-field">
+            <div class="names">
+              <label for="name" class="centered">FIRST NAME</label>
+              <input class="centered" type="text" name="first name">
+            </div>
 
-          <div class="names">
-            <label for="name" class="centered">LAST NAME</label>
-            <input class="centered" type="text" name="last name">
-          </div>
-          <label for="email" class="centered">E-MAIL</label>
-          <input class="centered" type="email" name="e-mail">
+            <div class="names">
+              <label for="name" class="centered">LAST NAME</label>
+              <input class="centered" type="text" name="last name">
+            </div>
+            <div class="email-wrapper">
+              <label for="email" class="centered">E-MAIL</label>
+              <input class="centered" type="email" name="e-mail">
+            </div>
 
-          <div class="submit-btn">
-            <input type="submit" value="Submit">
+            <div class="submit-btn">
+              <input type="submit" value="Submit">
+            </div>
           </div>
         </form>
 
