style spa packages page

--- a/salon-services.html
+++ b/salon-services.html
@@ -41,51 +41,55 @@
         <li><a href="#">Spa Packages</a></li>
         <li><a href="#">Our Blog</a></li>
       </ul>
+
+      <!-- SOCIAL MEDIA LINKS -->
+      <div class="sub-page-social-media">
+        <a href="#"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
+        <a href="#"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
+        <a href="#"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
+      </div>
     </nav>
 
-    <!-- SOCIAL MEDIA LINKS -->
-    <div class="sub-page-social-media">
-      <a href="#"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
-      <a href="#"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
-      <a href="#"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
-    </div>
+
 
     <!-- SALON SERVICES -->
     <div class="salon-services-wrapper">
       <h1 class="centered">SALON SERVICES</h1>
       <div class="pink-divider"></div>
 
-      <h2>HAIRCUTS & STYLING</h2>
-      <ul>
-        <li>Women's Haircut -  $15 & Up</li>
-        <li>Men's Haircut -  $12</li>
-        <li>Kid's Haircut -  $8</li>
-        <li>Shampoo and Haircut -  $20 & Up</li>
-        <li>Shampoo, Cut and Style -  $40</li>
-        <li>Shampoo, Blow-Dry and Style -  $30</li>
-        <li>Scalp Massage -  $25</li>
-        <li>Scalp Massage w/ Shampoo -  $30</li>
-        <li>Formal Style -  $30 & Up</li>
-      </ul>
+      <div class="salon-services-column">
+        <h2>HAIRCUTS & STYLING</h2>
+        <ul>
+          <li>Women's Haircut -  $15 & Up</li>
+          <li>Men's Haircut -  $12</li>
+          <li>Kid's Haircut -  $8</li>
+          <li>Shampoo and Haircut -  $20 & Up</li>
+          <li>Shampoo, Cut and Style -  $40</li>
+          <li>Shampoo, Blow-Dry and Style -  $30</li>
+          <li>Scalp Massage -  $25</li>
+          <li>Scalp Massage w/ Shampoo -  $30</li>
+          <li>Formal Style -  $30 & Up</li>
+        </ul>
 
-      <h2>COLOR</h2>
-      <ul>
-        <li>Color Change -  $50 & Up</li>
-        <li>Full Hair Color -  $40 & Up</li>
-        <li>Color Touch-up -  $30</li>
-        <li>Henna Color -  $35</li>
-        <li>Partial Highlights -  $45 & Up</li>
-        <li>Full Highlights -  $75 & Up</li>
-        <li>Men's Color -  $25</li>
-      </ul>
+        <h2>COLOR</h2>
+        <ul>
+          <li>Color Change -  $50 & Up</li>
+          <li>Full Hair Color -  $40 & Up</li>
+          <li>Color Touch-up -  $30</li>
+          <li>Henna Color -  $35</li>
+          <li>Partial Highlights -  $45 & Up</li>
+          <li>Full Highlights -  $75 & Up</li>
+          <li>Men's Color -  $25</li>
+        </ul>
 
-      <h2>TREATMENTS</h2>
-      <ul>
-        <li>Permanent Straightening -  $80 & Up</li>
-      </ul>
+        <h2>TREATMENTS</h2>
+        <ul>
+          <li>Permanent Straightening -  $80 & Up</li>
+        </ul>
+      </div>
 
       <!-- BOOK NOW BUTTON -->
-      <div class="book-now-wrapper centered">
+      <div class="red-book-now-wrapper centered">
         <button type="button" class="red-book-now">BOOK NOW</button>
       </div>
     </div>
@@ -93,7 +97,7 @@
     <footer class="sub-page-footer maroon-footer">
 
       <!-- LOCATION & HOURS -->
-      <div class="grid centered">
+      <div class="padding centered">
         <p>646 S Frontenac St unit 101,
           Aurora, IL 60504</p>
         <p class="phone">PHONE: (630) 499-8260</p>
