--- a/spa-services.html
+++ b/spa-services.html
@@ -41,71 +41,72 @@
         <li><a href="#">Spa Packages</a></li>
         <li><a href="#">Our Blog</a></li>
       </ul>
-    </nav>
 
-    <!-- SOCIAL MEDIA LINKS -->
-    <div class="sub-page-social-media">
-      <a href="#"><svg class="icon icon-facebook pink"><use xlink:href="#icon-facebook"></use></svg></a>
-      <a href="#"><svg class="icon icon-instagram pink"><use xlink:href="#icon-instagram"></use></svg></a>
-      <a href="#"><svg class="icon icon-twitter pink"><use xlink:href="#icon-twitter"></use></svg></a>
-    </div>
+      <!-- SOCIAL MEDIA LINKS -->
+      <div class="sub-page-social-media">
+        <a href="#"><svg class="icon icon-facebook pink"><use xlink:href="#icon-facebook"></use></svg></a>
+        <a href="#"><svg class="icon icon-instagram pink"><use xlink:href="#icon-instagram"></use></svg></a>
+        <a href="#"><svg class="icon icon-twitter pink"><use xlink:href="#icon-twitter"></use></svg></a>
+      </div>
+    </nav>
 
     <!-- SALON SERVICES -->
     <div class="spa-services-wrapper">
       <h1 class="centered">SPA SERVICES</h1>
       <div class="pink-divider"></div>
 
-      <h2>HAIR REMOVAL</h2>
-      <ul>
-        <li>Eyebrow Threading -  $5</li>
-        <li>Eyebrow Waxing -  $6</li>
-        <li>Upper Lip -  $3</li>
-        <li>Chin -  $4 & Up</li>
-        <li>Sideburns -  $7</li>
-        <li>Forehead -  $4</li>
-        <li>Full Face -  $20</li>
-        <li>Under Arms -  $8</li>
-        <li>Half Arms -  $15</li>
-        <li>Full Arms -  $20</li>
-        <li>Half Legs -  $20</li>
-        <li>Full Legs -  $35</li>
-        <li>Bikini Line -  $15</li>
-        <li>Brazilian -  $40</li>
-        <li>Stomach -  $20</li>
-        <li>Full Back -  $25</li>
-        <li>Full Body & Bikini -  $140</li>
-        <li>Men's Chest -  $40</li>
-        <li>Men's Back & Shoulders -  $40</li>
-      </ul>
+      <div class="spa-services-column-wrapper">
 
-      <h2>FACIALS</h2>
-      <ul>
-        <li>Herbal Facial -  $30</li>
-        <li>Fruit Facial -  $30</li>
-        <li>Back Facial -  $50</li>
-        <li>Anti-Acne Facial -  $50</li>
-        <li>Anti-Aging -  $60</li>
-        <li>Vitamin C Facial -  $60</li>
-        <li>Four Layer Facial -  $60</li>
-        <li>Janssen Whitening Facial -  $60</li>
-        <li>Shahnaz Men's Facial -  $45</li>
-        <li>Shahnaz Gold -  $45</li>
-        <li>Shahnaz Neem -  $35</li>
-        <li>Shahnaz Diamond -  $50</li>
-        <li>Shahnaz Pearl -  $50</li>
-      </ul>
+        <ul class="spa-services-column">
+          <h2>HAIR REMOVAL</h2>
+          <li>Eyebrow Threading -  $5</li>
+          <li>Eyebrow Waxing -  $6</li>
+          <li>Upper Lip -  $3</li>
+          <li>Chin -  $4 & Up</li>
+          <li>Sideburns -  $7</li>
+          <li>Forehead -  $4</li>
+          <li>Full Face -  $20</li>
+          <li>Under Arms -  $8</li>
+          <li>Half Arms -  $15</li>
+          <li>Full Arms -  $20</li>
+          <li>Half Legs -  $20</li>
+          <li>Full Legs -  $35</li>
+          <li>Bikini Line -  $15</li>
+          <li>Brazilian -  $40</li>
+          <li>Stomach -  $20</li>
+          <li>Full Back -  $25</li>
+          <li>Full Body & Bikini -  $140</li>
+          <li>Men's Chest -  $40</li>
+          <li>Men's Back & Shoulders -  $40</li>
+        </ul>
 
-      <h2>ADDITIONAL SERVICES</h2>
-      <ul>
-        <li>Face Polish -  $10</li>
-        <li>30 Minute Massage -  $40 & Up</li>
-        <li>Henna Tattoos -  $5 & Up</li>
-        <li>Party Makeup & Formal Style -  $75</li>
-        <li>Ear or Nose Piercing -  $15</li>
-      </ul>
+        <ul class="spa-services-column">
+          <h2>FACIALS</h2>
+          <li>Herbal Facial -  $30</li>
+          <li>Fruit Facial -  $30</li>
+          <li>Back Facial -  $50</li>
+          <li>Anti-Acne Facial -  $50</li>
+          <li>Anti-Aging -  $60</li>
+          <li>Vitamin C Facial -  $60</li>
+          <li>Four Layer Facial -  $60</li>
+          <li>Janssen Whitening Facial -  $60</li>
+          <li>Shahnaz Men's Facial -  $45</li>
+          <li>Shahnaz Gold -  $45</li>
+          <li>Shahnaz Neem -  $35</li>
+          <li>Shahnaz Diamond -  $50</li>
+          <li>Shahnaz Pearl -  $50</li>
+
+          <h2>ADDITIONAL SERVICES</h2>
+          <li>Face Polish -  $10</li>
+          <li>30 Minute Massage -  $40 & Up</li>
+          <li>Henna Tattoos -  $5 & Up</li>
+          <li>Party Makeup & Formal Style -  $75</li>
+          <li>Ear or Nose Piercing -  $15</li>
+        </ul>
+      </div>
 
       <!-- BOOK NOW BUTTON -->
-      <div class="book-now-wrapper centered">
+      <div class="red-book-now-wrapper centered">
         <button type="button" class="red-book-now">BOOK NOW</button>
       </div>
     </div>
@@ -113,7 +114,7 @@
     <footer class="sub-page-footer pink-footer">
 
       <!-- LOCATION & HOURS -->
-      <div class="grid centered">
+      <div class="padding centered">
         <p>646 S Frontenac St unit 101,
           Aurora, IL 60504</p>
         <p class="phone">PHONE: (630) 499-8260</p>
