added animation to heading on index and blog

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- MOBILE NAVIGATION -->
     <nav class="mobile-home-nav">
       <ul>
-        <li><a href="#"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html">Spa Services</a></li>
         <li><a href="#">Spa Packages</a></li>
         <li><a href="#">Our Blog</a></li>
       </ul>
@@ -46,21 +46,20 @@
     <!-- NAVIGATION -->
     <nav class="home-nav">
       <ul>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
-        <li><a href="#"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
-        <li><a href="#">Spa Packages</a></li>
-        <li><a href="#">Our Blog</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-packages.html">Spa Packages</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/our-blog.html">Our Blog</a></li>
       </ul>
     </nav>
 
-    <div class="homepage-heading-wrapper">
+    <div class="homepage-heading-wrapper animated slideInLeft">
       <h1 id="homepage-heading"><span class="homepage-heading_hello">Hello</span> <span class="special-heading">Gorgeous</span></h1>
     </div>
 
     <!-- WELCOME -->
-    <main>
-      <!--<img class="overlay" src="assets/dist/img/flower-overlay.png" alt="flowers" title="flowers">-->
+    <main id="home-main">
       <h2 class="centered">WELCOME</h2>
       <div class="pink-divider"></div>
       <div class="column-wrapper">
@@ -141,9 +140,9 @@
         <!-- SOCIAL MEDIA LINKS -->
         <div class="social-media-wrapper">
           <div class="social-media">
-            <a href="#"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
-            <a href="#"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
-            <a href="#"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
+            <a href="http://www.facebook.com"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
+            <a href="http://www.instagram.com"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
+            <a href="http://www.twitter.com"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
           </div>
         </div>
       </div>
