--- a/spa-packages.html
+++ b/spa-packages.html
@@ -31,19 +31,19 @@
 
     <!-- NAVIGATION -->
     <nav class="pages-nav centered red">
-      <a href="#"><img src="assets/dist/img/allure-alt-logo-red.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
+      <a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-alt-logo-red.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
       <ul>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
-        <li><a href="#" id="current-page">Spa Packages</a></li>
-        <li><a href="#">Our Blog</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-packages.html" id="current-page">Spa Packages</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/our-blog.html">Our Blog</a></li>
       </ul>
 
       <!-- SOCIAL MEDIA LINKS -->
       <div class="sub-page-social-media">
-        <a href="#"><svg class="icon icon-facebook red"><use xlink:href="#icon-facebook"></use></svg></a>
-        <a href="#"><svg class="icon icon-instagram red"><use xlink:href="#icon-instagram"></use></svg></a>
-        <a href="#"><svg class="icon icon-twitter red"><use xlink:href="#icon-twitter"></use></svg></a>
+        <a href="http://www.facebook.com"><svg class="icon icon-facebook red"><use xlink:href="#icon-facebook"></use></svg></a>
+        <a href="http://www.instagram.com"><svg class="icon icon-instagram red"><use xlink:href="#icon-instagram"></use></svg></a>
+        <a href="http://www.twitter.com"><svg class="icon icon-twitter red"><use xlink:href="#icon-twitter"></use></svg></a>
       </div>
     </nav>
 
