--- a/our-blog.html
+++ b/our-blog.html
@@ -32,41 +32,38 @@
       </symbol>
     </svg>
 
-    <!-- BACKGROUND IMAGE -->
-    <!--<img class="background" src="assets/dist/img/blog-bg.jpg" alt="white paint" title="white paint">-->
-
     <!-- MOBILE NAVIGATION -->
     <nav class="mobile-home-nav">
       <ul>
-        <li><a href="#"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
-        <li><a href="#">Spa Packages</a></li>
-        <li><a href="#" class="current-page">Our Blog</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-packages.html">Spa Packages</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/our-blog.html" class="current-page">Our Blog</a></li>
       </ul>
     </nav>
 
     <!-- DESKTOP NAVIGATION -->
     <nav class="home-nav">
       <ul>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
-        <li><a href="#"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
-        <li><a href="#">Spa Packages</a></li>
-        <li><a href="#" class="current-page">Our Blog</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-packages.html">Spa Packages</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/our-blog.html" class="current-page">Our Blog</a></li>
       </ul>
     </nav>
 
-    <div class="homepage-heading-wrapper">
+    <div class="homepage-heading-wrapper animated slideInLeft">
       <h1 id="homepage-heading"><span class="homepage-heading_our">OUR</span> <span class="special-heading">Blog</span></h1>
     </div>
 
     <!-- SOCIAL MEDIA LINKS -->
     <div class="social-media-wrapper left">
       <div class="social-media">
-        <a href="#"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
-        <a href="#"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
-        <a href="#"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
+        <a href="http://www.facebook.com"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
+        <a href="http://www.instagram.com"><svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg></a>
+        <a href="http://www.twitter.com"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
       </div>
     </div>
 
