--- a/spa-services.html
+++ b/spa-services.html
@@ -29,24 +29,21 @@
       </defs>
     </svg>
 
-    <!-- BACKGROUND IMAGE -->
-    <!--<img class="background" src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">-->
-
     <!-- NAVIGATION -->
     <nav class="pages-nav centered">
-      <a href="#"><img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
+      <a href="http://www.caitlinaudreyjohnson.com/allure/index.html"><img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
       <ul>
-        <li><a href="#">Salon Services</a></li>
-        <li><a href="#" id="current-page">Spa Services</a></li>
-        <li><a href="#">Spa Packages</a></li>
-        <li><a href="#">Our Blog</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/salon-services.html">Salon Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-services.html" id="current-page">Spa Services</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/spa-packages.html">Spa Packages</a></li>
+        <li><a href="http://www.caitlinaudreyjohnson.com/allure/our-blog.html">Our Blog</a></li>
       </ul>
 
       <!-- SOCIAL MEDIA LINKS -->
       <div class="sub-page-social-media">
-        <a href="#"><svg class="icon icon-facebook pink"><use xlink:href="#icon-facebook"></use></svg></a>
-        <a href="#"><svg class="icon icon-instagram pink"><use xlink:href="#icon-instagram"></use></svg></a>
-        <a href="#"><svg class="icon icon-twitter pink"><use xlink:href="#icon-twitter"></use></svg></a>
+        <a href="http://www.facebook.com"><svg class="icon icon-facebook pink"><use xlink:href="#icon-facebook"></use></svg></a>
+        <a href="http://www.instagram.com"><svg class="icon icon-instagram pink"><use xlink:href="#icon-instagram"></use></svg></a>
+        <a href="http://www.twitter.com"><svg class="icon icon-twitter pink"><use xlink:href="#icon-twitter"></use></svg></a>
       </div>
     </nav>
 
