add keyframe to heading on spa packages

--- a/spa-packages.html
+++ b/spa-packages.html
@@ -47,7 +47,7 @@
       </div>
     </nav>
 
-    <div class="spa-packages-heading">
+    <div class="spa-packages-heading animated slideInLeft">
       <h1 id="spa-packages-heading"><span class="spa-packages-heading_spa">SPA</span> <span class="special-heading red">Packages</span></h1>
     </div>
 
